packages/ag-grid-angular-theme/src/theme.scss
/* ... */
@mixin _ag-header-cell-border() {
    .ag-header-cell {
        // Analogous to .ag-cell, to ensure they are always the same size
        border: var(--kbq-size-border-width) solid transparent;
    }
}

@mixin _ag-row-border {
    .ag-row {
        border-bottom: unset;
    }
}

@mixin _ag-cell-inline-editing() {
    .ag-cell-inline-editing {
        padding: unset;
        border-radius: unset;
        box-shadow: unset;

        @include ag.text-input {
            border-radius: unset;
            box-shadow: unset;
            border: unset;
        }

        .ag-select .ag-picker-field-wrapper {
            border-radius: unset;
            box-shadow: unset;
            border: unset;
        }
    }
}

@mixin _ag-popup-editor() {
    .ag-popup-editor {
        border-radius: var(--ag-border-radius);
    }
}

@mixin _ag-body-scrollbar {
    // @TODO Should update CSS variables (#DS-3668)
    .ag-body-vertical-scroll .ag-body-vertical-scroll-viewport,
    .ag-body-horizontal-scroll .ag-body-horizontal-scroll-viewport {
        --ag-theme-koobiq-scrollbar-offset: 3px;
        --ag-theme-koobiq-scrollbar-size: calc(var(--kbq-size-s) + var(--ag-theme-koobiq-scrollbar-offset) * 2);
        --ag-theme-koobiq-scrollbar-track-color: transparent;
        --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a32);
        --ag-theme-koobiq-scrollbar-thumb-min-size: var(--kbq-size-3xl);

        @include _dark-theme {
            --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a48);
        }

        &::-webkit-scrollbar {
            // https://github.com/ag-grid/ag-grid/blob/v32.3.8/community-modules/theming/src/styles/core/css/general.css#L130
            display: unset;

            &:vertical {
                width: var(--ag-theme-koobiq-scrollbar-size);
            }

            &:horizontal {
                height: var(--ag-theme-koobiq-scrollbar-size);
            }
        }

        &::-webkit-scrollbar-track {
            background-color: var(--ag-theme-koobiq-scrollbar-track-color);
        }

        &::-webkit-scrollbar-thumb {
            background-color: var(--ag-theme-koobiq-scrollbar-thumb-color);
            border-radius: var(--kbq-size-border-radius);
            border: var(--ag-theme-koobiq-scrollbar-offset) solid var(--ag-theme-koobiq-scrollbar-track-color);

            // https://stackoverflow.com/a/16829330/6386666
            background-clip: content-box;

            &:vertical {
                min-height: var(--ag-theme-koobiq-scrollbar-thumb-min-size);
            }

            &:horizontal {
                min-width: var(--ag-theme-koobiq-scrollbar-thumb-min-size);
            }

            &:active {
                --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-20-a55);

                @include _dark-theme {
                    --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a80);
                }
            }

            &:hover {
                --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a48);

                @include _dark-theme {
                    --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a60);
                }
            }
        }

        // For Firefox compatibility
        @supports not selector(::-webkit-scrollbar) {
            // https://github.com/ag-grid/ag-grid/blob/v32.3.8/community-modules/theming/src/styles/core/css/general.css#L133
            scrollbar-width: unset;
            scrollbar-color: var(--ag-theme-koobiq-scrollbar-thumb-color) var(--ag-theme-koobiq-scrollbar-track-color);

            &:active {
                --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-20-a55);

                @include _dark-theme {
                    --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a80);
                }
            }

            &:hover {
                --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a48);

                @include _dark-theme {
                    --ag-theme-koobiq-scrollbar-thumb-color: var(--kbq-palette-grey-50-a60);
                }
            }
        }
    }
}

@mixin _ag-theme-typography() {
    line-height: var(--kbq-typography-text-normal-line-height);
    letter-spacing: var(--kbq-typography-text-normal-letter-spacing);
    font-weight: var(--kbq-typography-text-normal-font-weight);
    text-transform: var(--kbq-typography-text-normal-text-transform);
    font-feature-settings: var(--kbq-typography-text-normal-font-feature-settings);
    color: var(--ag-data-color);
}

@mixin _ag-pinned-column-border() {
    @each $side in ('left', 'right') {
        &.ag-theme-koobiq_pinned-#{$side}-cols-overflow {
            .ag-pinned-#{$side}-header,
            .ag-pinned-#{$side}-cols-container {
                z-index: 1;
                box-shadow: if(
                    $side == 'left',
                    var(--kbq-shadow-overflow-compact-right),
                    var(--kbq-shadow-overflow-compact-left)
                );
            }
        }
    }
}

@mixin _ag-disable-cell-focus() {
    .ag-cell-focus {
        --ag-range-selection-border-color: transparent;
    }
}

@mixin _ag-cell-with-selection-checkbox() {
    .ag-cell:has(.ag-selection-checkbox) {
        .ag-checkbox-input-wrapper {
            position: unset;

            .ag-checkbox-input {
                position: absolute;
                left: 0;
                top: 0;
            }

            &::after {
                position: unset;
                display: block;
            }
        }
    }
}
/* ... */

